manifests/deploy-microservice.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        app: rohit-microservices
        stack: frontend
        source: demo
    name: rohit-microservices
    namespace: microservices
spec:
    replicas: 3
    selector:
        matchLabels:
            run: rohit-microservices
    template:
        metadata:
            labels:
                app: rohit-microservices
                run: rohit-microservices
                source: demo
        spec:
            containers:
                -   image: 465848653329.dkr.ecr.us-west-2.amazonaws.com/rohit-microservices
                    name: rohit-microservices
                    ports:
                        -   name: web
                            containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
    labels:
        app: rohit-microservices-service
    name: rohit-microservices-service
    namespace: microservices
spec:
    selector:
        source: demo
        app: rohit-microservices
    ports:
        -   name: web
            protocol: TCP
            port: 30201
            targetPort: 8080

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
    name: rohit-microservices-ingress
    namespace: microservices
spec:
    rules:
        -   http:
                paths:
                    -   path: /rohit-microservices(/|$)(.*)
                        backend:
                            serviceName: rohit-microservices-service
                            servicePort: 30201
